--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Adebayo Jubreel <whizkidjubrealguy@gmail.com>
+Keriane Nzabampema <kerianenzabampema@gmail.com>
